Fix header dropdown positioning on mobile

--- a/src/assets/styles/components/_navigation.scss
+++ b/src/assets/styles/components/_navigation.scss
@@ -150,7 +150,7 @@
 
     .menu-button__options {
       left: unset;
-      right: -100%;
+      right: 0;
     }
 
     &__link {
